# fact-rs

./: .gitignore  .nix_envrc  CHANGELOG.md  Cargo.toml  README.md  default.nix  justfile  package.nix  shell.nix
.github/: release-please-config.json
.github/workflows/: ci.yml  on_main.yml  reusable_checks.yml
assets/: references.bib
examples/: g2o.rs  gps.rs  graph_viz.rs  readme.rs  serde.rs  test_conditional.rs
examples/data/: README.md  add_outliers.py  sphere2500.g2o.outliers
factrs-bench/: Cargo.toml  plot.py
factrs-bench/benches/: g2o-2d.rs  g2o-3d.rs  g2o.rs
factrs-bench/cpp/: CMakeLists.txt  bench.cpp  bench_ceres.h  optimize_g2o.cpp
factrs-bench/src/: lib.rs  sophus_loader.rs  sophus_se3.rs
factrs-proc/: Cargo.toml
factrs-proc/src/: lib.rs  noise.rs  residual.rs  variable.rs
src/: lib.rs  rerun.rs  utils.rs
src/containers/: factor.rs  graph.rs  order.rs  symbol.rs  values.rs
src/linalg/: dual.rs  forward_prop.rs  mod.rs  nalgebra_wrap.rs  numerical_diff.rs
src/linear/: conditional.rs  factor.rs  factor_tree.rs  graph.rs  mod.rs  solvers.rs
src/noise/: gaussian.rs  mod.rs  unit.rs
src/optimizers/: gauss_newton.rs  gnc.rs  levenberg_marquardt.rs  macros.rs  mod.rs  traits.rs
src/residuals/: prior.rs  traits.rs
src/residuals/imu_preint/: delta.rs  residual.rs
src/robust/: mod.rs
src/variables/: mod.rs  se2.rs  se23.rs  se3.rs  so2.rs  so3.rs  traits.rs  vector.rs
tests/: custom_key.rs  custom_noise.rs  custom_residual.rs  custom_robust.rs  custom_variable.rs  graph_and_factors_are_send.rs  serde.rs
