[package]
name = "factrs-bench"
version = "0.2.0"
edition = "2021"

[dependencies]
faer.workspace = true
nalgebra.workspace = true
factrs = { version = "0.2.0", path = ".." }
tiny-solver = { version = "0.17" }

[dev-dependencies]
diol = { version = "0.13.0", default-features = false }

[[bench]]
name = "g2o"
harness = false
